Started making mcmc sampler

--- a/transitSim.ipynb
+++ b/transitSim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "09caa768",
    "metadata": {},
    "outputs": [],
@@ -15,23 +15,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "id": "7cc2ef1c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generateEllipse(a,b,centerX,centerY, grid):\n",
+    "def generateEllipse(a,b,centerX,centerY, grid, opacity):\n",
     "    for x in range(len(grid)):\n",
     "        for y in range(len(grid[0])):\n",
     "            if ((x-centerX)/a)*((x-centerX)/a) + ((y-centerY)/b)*((y-centerY)/b) <= 1:\n",
-    "                grid[x][y] = 1\n",
+    "                grid[x][y] = opacity\n",
     "    \n",
     "    return grid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 55,
    "id": "7904d043",
    "metadata": {},
    "outputs": [],
@@ -52,19 +52,22 @@
     "    intDiffs = [int(d/minDiff) for d in differences]\n",
     "    length = np.sum(intDiffs)\n",
     "    \n",
-    "    res = int((2*(b+r))/length) + 1\n",
+    "    \n",
+    "    res = int((2*(b+r))/length)\n",
+    "    if res < 1:\n",
+    "        res = 1\n",
     "    rnew = int(res*length/(2*(1+br)))\n",
     "    bnew = int(br*rnew)\n",
     "    anew = int(ab*bnew)\n",
     "    newIntDiffs = [res*i for i in intDiffs]\n",
+    "    print(res)\n",
     "    print(np.sum(newIntDiffs))\n",
-    "    print(2*rnew)\n",
-    "    \n",
+    "    print(2*(rnew+bnew))\n",
     "    \n",
     "    starGrid = np.zeros([2*rnew, 4*bnew+2*rnew+4])\n",
     "    ellipseGrid = np.zeros([2*rnew, 4*bnew+2*rnew+4])\n",
-    "    starGrid = generateEllipse(rnew,rnew,rnew, 2*bnew+rnew, starGrid)\n",
-    "    ellipseGrid = generateEllipse(anew,bnew,rnew,3*bnew+2*rnew + 2,ellipseGrid)\n",
+    "    starGrid = generateEllipse(rnew,rnew,rnew, 2*bnew+rnew, starGrid,1)\n",
+    "    ellipseGrid = generateEllipse(anew,bnew,rnew,3*bnew+2*rnew + 2,ellipseGrid,1)\n",
     "    planetGrid = np.ones([2*rnew,4*bnew+2*rnew+ 4]) - ellipseGrid\n",
     "    fluxGrid = np.multiply(starGrid,planetGrid)\n",
     "    initialFlux = np.sum(fluxGrid)\n",
@@ -90,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 56,
    "id": "3fc156e2",
    "metadata": {},
    "outputs": [
@@ -98,9 +101,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1\n",
       "249\n",
-      "198\n",
-      "0.14536166191101074\n"
+      "246\n",
+      "0.13428401947021484\n"
      ]
     }
    ],
@@ -114,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 57,
    "id": "be48826f",
    "metadata": {},
    "outputs": [
